refactor(activity): supprime l'importation inutile de Link et améliore le style des cartes de catégorie

--- a/src/components/layout/navbar/navbar.module.css
+++ b/src/components/layout/navbar/navbar.module.css
@@ -219,7 +219,7 @@
     top: 90px;
     right: -100%;
     height: calc(100vh - 90px);
-    width: 100%;
+    /* width: 100%; */
     background-color: floralwhite;
     flex-direction: column;
     gap: 2rem;
